Fix focus borders on buttons for high contrast Fixes #5482

--- a/webviews/activityBarView/index.css
+++ b/webviews/activityBarView/index.css
@@ -100,10 +100,6 @@ form button {
 	fill: var(--vscode-button-foreground);
 }
 
-button:focus,
-input[type='submit']:focus {
-	outline-offset: -1px;
-}
 
 .select-control button,
 .branch-status-container button,
